ewarehouse-apex/api/src/objects/Harvest__c.object
<CustomObject>
    <fields>
        <fullName>Crop__c</fullName>
        <label>Crop</label>
        <picklist>
            <picklistValues>
                <fullName>Maize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pigeon peas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black beans(Dolichos)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cow peas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green grams</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Quality_Rating__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Quality Rating</label>
        <referenceTo>Quality_Rating__c</referenceTo>
        <relationshipLabel>Harvests</relationshipLabel>
        <relationshipName>Harvests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Harvested__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Harvested</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Farmer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Farmer</label>
        <referenceTo>Farmer__c</referenceTo>
        <relationshipLabel>Harvests</relationshipLabel>
        <relationshipName>Harvests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Quality_Rating__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Quality Rating</label>
        <referenceTo>Quality_Rating__c</referenceTo>
        <relationshipLabel>Harvests (Previous Quality Rating)</relationshipLabel>
        <relationshipName>Harvests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Accepted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Accepted</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Harvested__c</fullName>
        <label>Quantity Harvested</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Rejected__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Rejected</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage_Location__c</fullName>
        <label>Storage Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Harvest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>H{000000}</displayFormat>
        <label>Harvest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Harvests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>